# automatical_capture

./: .gitignore  README.md  capture.sh  pyproject.toml  requirments.txt  save_capture.py  test.py
setup/: setup_directory.py  setup_files.py  setup_optional_args.py
src/: save_capture.py
src/auto_capture/: setup_directory.py  setup_files.py  setup_keyboard.py  setup_optional_args.py
src/capture/: capture_mac_os.py  capture_windows_os.py
src/common/settings/: setup_directory.py  setup_files.py  setup_keyboard.py  setup_optional_args.py
src/util/windows/: box_bounding.py  image_controller.py  mouse_listen.py
